<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Distractic</string>
    <string name="description_distracticLogo">This is the Distractic logo.</string>
    <string name="description_lock">This is a lock.</string>

    <string name="login_usernameText">USERNAME</string>
    <string name="login_passwordText">PASSWORD</string>
    <string name="login_forgotPasswordText"><u>Forgot Password?</u></string>
    <string name="login_loginButton">LOG IN</string>
    <string name="login_signupText">Not a member yet?\n<u>Sign up!</u></string>

    <string name="signup_firstNameText">FIRST NAME</string>
    <string name="signup_lastNameText">LAST NAME</string>
    <string name="signup_emailText">EMAIL</string>
    <string name="signup_passwordText">PASSWORD</string>
    <string name="signup_confirmPasswordText">CONFIRM PASSWORD</string>
    <string name="signup_signupButton">SIGN UP</string>
    <string name="signup_loginText">Already have an account?\n<u>Log in!</u></string>

    <string name="home_trackRecordText">Track your driving record</string>
    <string name="home_loginSignupText"><u>Login or Sign Up</u></string>
    <string name="home_startDrivingButton">START DRIVING</string>
    <string name="home_logoutButton">LOGOUT</string>

    <string name="camera_restingCalibratedText">Resting face position calibrated</string>
    <string name="camera_noFaceText">Error: No face found</string>
    <string name="camera_notDistractedText">You are not distracted</string>
    <string name="camera_calibrateButton">Calibrate</string>
    <string name="camera_stopDrivingButton">Stop Driving</string>

    <string name="landing_loginButton">LOG IN</string>
    <string name="landing_signupButton">SIGN UP</string>
    <string name="landing_skipText"><u>Skip Now</u></string>

    <string name="reset_passwordText">PASSWORD</string>
    <string name="reset_resetPassword">Reset Your Password</string>
    <string name="reset_confirmPasswordText">CONFIRM PASSWORD</string>
    <string name="reset_remember">Remember your password?\n<u>Login Now!</u></string>
    <string name="reset_resetButton">RESET</string>

    <string name="forgot_password">Forgot Your Password?</string>
    <string name="forgot_emailText">EMAIL</string>
    <string name="forgot_resetPasswordButton">RESET PASSWORD</string>
    <string name="forgot_passwordMessage">Don\’t worry! We will send you an email with a link to reset your password.</string>
    <string name="forgot_sendButton">SEND</string>
    <string name="forgot_backText">&lt;&lt; GO BACK</string>

    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_settings">Settings</string>

    <string name="settings_settingsText">SETTINGS</string>
    <string name="settings_editButton">Edit</string>

    <string name="change_changePasswordText">Change Your Password</string>
    <string name="change_oldPasswordText">OLD PASSWORD</string>
    <string name="change_doneButton">DONE</string>
    <string name="change_text_back">GO BACK</string>
    <string name="change_newPasswordText">NEW PASSWORD</string>
</resources>
