<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_opaque_road"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/landing_image_distracticLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/description_distracticLogo"
        android:src="@drawable/full_logo" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/landing_button_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/landing_image_distracticLogo"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_rounded_button"
        android:text="@string/landing_signupButton"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/landing_button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/landing_button_signup"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rounded_button_filled"
        android:text="@string/landing_loginButton"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/landing_text_skipnow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/landing_button_login"
        android:layout_marginTop="20dp"
        android:text="@string/landing_skipnowText"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>