<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_opaque_road_white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signup_image_distracticLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/description_distracticLogo"
        android:src="@drawable/car_logo_pink" />

    <TextView
        android:id="@+id/signup_text_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_image_distracticLogo"
        android:layout_marginBottom="-15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/signup_firstNameText"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_text_firstName"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">


        <EditText
            android:id="@+id/signup_edit_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextGrey" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/signup_text_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_firstName"
        android:layout_marginBottom="-15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/signup_lastNameText"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_text_lastName"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/signup_edit_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextGrey" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/signup_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_lastName"
        android:layout_marginBottom="-15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/signup_emailText"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_text_email"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/signup_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextGrey" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/signup_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_email"
        android:layout_marginBottom="-15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/signup_passwordText"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_text_password"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/signup_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_key"
            android:inputType="textPassword"
            android:textColor="@color/colorTextGrey" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/signup_text_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_password"
        android:layout_marginBottom="-15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/signup_confirmPasswordText"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_text_confirmPassword"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/signup_edit_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_key"
            android:inputType="textPassword"
            android:textColor="@color/colorTextGrey" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signup_button_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_confirmPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_rounded_button_filled"
        android:text="@string/signup_signupButton"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/signup_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_button_signup"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:text="@string/signup_loginText"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <ProgressBar
        android:id="@+id/signup_progress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_text_login"
        android:layout_marginBottom="-20dp"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>