<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_opaque_road_white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/change_image_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_key2" />

    <TextView
        android:id="@+id/change_text_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_image_lock"
        android:layout_centerInParent="true"
        android:text="@string/change_changePasswordText"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/change_text_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_text_changePassword"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/change_oldPasswordText"
        android:layout_marginBottom="-15dp"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/change_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_text_oldPassword"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/change_edit_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_key"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/change_text_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_oldPassword"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="-15dp"
        android:gravity="start"
        android:text="@string/change_newPassowrdText"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/change_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/change_text_newPassword">

        <EditText
            android:id="@+id/change_edit_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_key"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/change_button_donebutton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_newPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rounded_button_filled"
        android:text="@string/change_doneButton"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/change_text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_button_donebutton"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/change_text_back"
        android:textColor="@color/colorTextGrey"
        android:textSize="15sp" />


    <ProgressBar
        android:id="@+id/change_progress_loading"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_text_back"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>