<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash"
    android:keepScreenOn="true">

    <com.distractic.models.CameraSourcePreview
        android:id="@+id/camera_cameraSourcePreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </com.distractic.models.CameraSourcePreview>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="60dp">

        <ToggleButton
            android:id="@+id/camera_button_switchCamera"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|end"
            android:background="@drawable/switch_camera"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:textOff=""
            android:textOn=""
            android:checked="true" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_height="150dp"
        android:background="@drawable/gradient">
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/frame_distracted"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/camera_text_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text=""/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_distracted"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/frame_control"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/camera_text_distracted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/camera_notDistractedText"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_control"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/camera_cameraSourcePreview">

        <Button
            android:id="@+id/camera_button_calibrate"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:background="@drawable/round_button"
            android:textColor="#FFFFFF"
            android:text="@string/camera_calibrateButton"/>


        <Button
            android:id="@+id/camera_button_stopDriving"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/round_button"
            android:layout_marginEnd="20dp"
            android:textColor="#FFFFFF"
            android:text="@string/camera_stopDrivingButton"/>

    </FrameLayout>

    <com.distractic.models.GraphicOverlay
        android:id="@+id/camera_graphicOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>
